--- a/Asc+/src/main/resources/localization/eng/AscensionCardStrings.json
+++ b/Asc+/src/main/resources/localization/eng/AscensionCardStrings.json
@@ -1,6 +1,10 @@
 {
     "AscendersBane": {
         "NAME": "Ascender's Bane",
-        "DESCRIPTION": "Unplayable. NL Celestial NL Cannot be removed from your deck."
+        "DESCRIPTION": "Unplayable. NL Celestial. NL Cannot be removed from your deck."
+    },
+    "Doubt": {
+        "NAME": "Doubt",
+        "DESCRIPTION": "Unplayable. NL Soulbound. NL At the end of your turn, gain 1 Weak. "
     }
 }
