Added progression to the mod and changed an ascension level.

--- a/Asc+/src/main/resources/localization/eng/AscensionRelicStrings.json
+++ b/Asc+/src/main/resources/localization/eng/AscensionRelicStrings.json
@@ -1,5 +1,5 @@
 {
-    "TestOfThePizza": {
+    "AscMod:TestOfThePizza": {
         "NAME": "Pronto Pepper Pizza",
         "FLAVOR": "Pizza can't melt LEGO bars...  or can it? ",
         "DESCRIPTIONS": [
@@ -8,7 +8,7 @@
             " damage"
         ]
     },
-    "JSpecialRelic": {
+    "AscMod:JSpecialRelic": {
         "NAME": "Pog Champ",
         "FLAVOR": "A very special relic for a very special person. Kappa",
         "DESCRIPTIONS": [
@@ -16,25 +16,32 @@
             "We don't need to rest bois! "
         ]
     },
-    "CursedBank": {
+    "AscMod:CursedBank": {
         "NAME": "Hungry Bank",
         "FLAVOR": "Is this thing getting lighter? ",
         "DESCRIPTIONS": [
-            "Whenever you gain gold lose #b20 % of the gold gained"
+            "Whenever you gain gold lose #b15 % of the gold gained"
         ]
     },
-    "StarOfAscension": {
+    "AscMod:CursedFlame": {
+        "NAME": "Cursed Flame",
+        "FLAVOR": "The flame lights the area with darkness, yet my vision is not impaired. ",
+        "DESCRIPTIONS": [
+            "Every time you open a boss chest obtain a random curse "
+        ]
+    },
+    "AscMod:StarOfAscension": {
         "NAME": "Star of Ascension",
         "FLAVOR": "Where am I keeping this thing? And why?",
         "DESCRIPTIONS": [
             "A star given to you by The Spire. It has an ominous feel to it. "
         ]
     },
-    "MegaStarOfAscension": {
+    "AscMod:MegaStarOfAscension": {
         "NAME": "Star of Ascension",
         "FLAVOR": "Where am I keeping this thing? And why?",
         "DESCRIPTIONS": [
-            "A star given to you by The Spire. It feels like it attracts evil magic. "
+            "A star given to you by The Spire. It feels like it attracts evil. "
         ]
     }
 }
