Added progression to the mod and changed an ascension level.

--- a/Asc+/src/main/resources/localization/eng/AscensionDesc.json
+++ b/Asc+/src/main/resources/localization/eng/AscensionDesc.json
@@ -20,7 +20,7 @@
         "Ascender's bane is no longer ethereal.",
         "You gain 15% less gold.",
         "Healing is 15% less effective.",
-        "Curses are no longer removable."
+        "Opening boss chests now gives you a random curse. "
     ]
   }
 }
