Started work on turning this into ascension reborn

--- a/src/main/resources/localization/eng/AscensionDesc.json
+++ b/src/main/resources/localization/eng/AscensionDesc.json
@@ -22,8 +22,8 @@
         "Bosses have more challenging movesets and abilities.",
         "Double Boss.",
         "Merchant's card removal now costs more.",
-        "You gain 15% less gold.",
-        "Healing is 20% less effective.",
+        "Some of your gold is eaten.",
+        "Healing is less effective.",
         "Ascender's bane is no longer ethereal.",
         "(Max Level) Opening boss chests now gives you a random curse. "
     ]
