Changed json strings

--- a/src/main/resources/localization/eng/AscensionDesc.json
+++ b/src/main/resources/localization/eng/AscensionDesc.json
@@ -25,7 +25,7 @@
         "Some of your gold is eaten.",
         "Healing is less effective.",
         "Ascender's bane is no longer ethereal.",
-        "(Max Level) Opening boss chests now gives you a random curse. "
+        "(Max Level) Choose a blight before every boss relic. "
     ]
   }
 }
