--- a/src/main/resources/localization/eng/AscensionRelicStrings.json
+++ b/src/main/resources/localization/eng/AscensionRelicStrings.json
@@ -1,4 +1,6 @@
 {
+    // DEPRECATED
+    
     "AscMod:TestOfThePizza": {
         "NAME": "Pronto Pepper Pizza",
         "FLAVOR": "Pizza can't melt LEGO bars...  or can it? ",
