--- a/src/main/resources/localization/eng/AscensionMinusDesc.json
+++ b/src/main/resources/localization/eng/AscensionMinusDesc.json
@@ -12,14 +12,14 @@
         "Higher Max HP.",
         "Shops cost less.",
         "Gain Max HP when you defeat a boss.",
-        "You gain 20% more gold.",
-        "Healing is 40% more effective.",
-        "Normal enemies now have 20% chance to drop a relic.",
+        "You gain more gold.",
+        "Healing is more effective.",
+        "Normal enemies now have chance to drop a relic.",
         "Elites now drop 1 more card.",
-        "Bosses now drop 1 more rare relic.",
-        "All combat rewards now contain 1 more potion.",
-        "Start each combat with 1 more max energy.",
-        "Draw 1 more card each turn.",
+        "Bosses now drop a rare relic.",
+        "All combat rewards now contain additional potion.",
+        "Start each combat with one extra max energy.",
+        "Draw one more card each turn.",
         "(Min Level) All starting cards are upgraded; all non-boss chests contain an extra relic."
     ]
   }
