--- a/src/main/resources/localization/eng/AscensionBlightStrings.json
+++ b/src/main/resources/localization/eng/AscensionBlightStrings.json
@@ -1,25 +1,25 @@
 {
     "AscMod:CursedBank": {
         "NAME": "Cursed Bank",
-        "DESCRIPTIONS": [
+        "DESCRIPTION": [
             "This hungry bank eats some of the gold you pick up. "
         ]
     },
     "AscMod:CursedFlame": {
         "NAME": "Cursed Flame",
-        "DESCRIPTIONS": [
+        "DESCRIPTION": [
             "The eternal flame of the spire punishes you when you kill a boss. "
         ]
     },
     "AscMod:MegaStarOfAscension": {
         "NAME": "Star of Ascension",
-        "DESCRIPTIONS": [
+        "DESCRIPTION": [
             "A star given to you by The Spire. It feels like it attracts evil. "
         ]
     },
     "AscMod:StarOfAscension": {
         "NAME": "Star of Ascension",
-        "DESCRIPTIONS": [
+        "DESCRIPTION": [
             "A star given to you by The Spire. It has an ominous feel to it. "
         ]
     }
