Progress on a huge update

--- a/src/main/resources/localization/eng/AscensionCardStrings.json
+++ b/src/main/resources/localization/eng/AscensionCardStrings.json
@@ -1,13 +1,9 @@
 {
-    "AscendersBane": {
+    "AscMod:ascendersbane": {
         "NAME": "Ascender's Bane",
-        "DESCRIPTION": "Unplayable. NL Celestial. NL Cannot be removed from your deck."
-    },
-    "Doubt": {
-        "NAME": "Doubt",
-        "DESCRIPTION": "Unplayable. NL Soulbound. NL At the end of your turn, gain 1 Weak. "
+        "DESCRIPTION": "Unplayable. NL Cannot be removed from your deck."
     }
-} 
+}
 
 
 
